<resources>
    <string name="app_name">Calculator</string>
    <!-- bottom nav -->
    <string name="calculator">Calculator</string>
    <string name="restaurant">Restaurant</string>
    <string name="converter">Unit Converter</string>
    <!-- calculator -->
    <string name="cal_disp1"></string>
    <string name="cal_disp2">0</string>
    <string name="cal_clr">C</string>
    <string name="cal_sign">+/-</string>
    <string name="cal_pct">%</string>
    <string name="cal_div">/</string>
    <string name="cal_mul">x</string>
    <string name="cal_sub">-</string>
    <string name="cal_add">+</string>
    <string name="cal_dot">.</string>
    <string name="cal_equ">=</string>
    <string name="cal_0">0</string>
    <string name="cal_1">1</string>
    <string name="cal_2">2</string>
    <string name="cal_3">3</string>
    <string name="cal_4">4</string>
    <string name="cal_5">5</string>
    <string name="cal_6">6</string>
    <string name="cal_7">7</string>
    <string name="cal_8">8</string>
    <string name="cal_9">9</string>
    <!-- restaurant -->
    <string name="rst_total">Total:</string>
    <string name="rst_tax">Tax:</string>
    <string name="rst_tip">Tip:</string>
    <string name="rst_split">Split:</string>
    <string name="rst_split_e">Even</string>
    <string name="rst_split_u">Uneven</string>
    <string name="rst_ppl"># People:</string>
    <string name="rst_amt">$0</string>
    <string name="rst_title">per person</string>

    <!-- converter -->
    <string name="con_len">Length</string>
    <string name="con_temp">Temp</string>
    <string name="con_mass">Mass</string>
    <string name="con_time">Time</string>
    <string name="con_speed">Speed</string>
    <string name="con_data">Data</string>
    <string name="con_from">From:</string>
    <string name="con_to">To:</string>
    <string-array name="con_arr_len">
        <item>Millimeters (mm)</item>
        <item>Centimeters (cm)</item>
        <item>Meters (m)</item>
        <item>Kilometers (km)</item>
        <item>Inches (in)</item>
        <item>Feet (ft)</item>
        <item>Yards (yd)</item>
        <item>Miles (mi)</item>
    </string-array>
    <string-array name="con_arr_len_u">
        <item>mm</item>
        <item>cm</item>
        <item>m</item>
        <item>km</item>
        <item>in</item>
        <item>ft</item>
        <item>yd</item>
        <item>mi</item>
    </string-array>
    <string-array name="con_arr_mass">
        <item>Pounds (lb)</item>
        <item>Ounces (oz)</item>
        <item>Grams (g)</item>
        <item>Kilograms (kg)</item>
        <item>Tons (t)</item>
    </string-array>
    <string-array name="con_arr_mass_u">
        <item>lb</item>
        <item>oz</item>
        <item>g</item>
        <item>kg</item>
        <item>t</item>
    </string-array>
    <string-array name="con_arr_temp">
        <item>Celsius (\u00B0C)</item>
        <item>Fahrenheit (\u00B0F)</item>
        <item>Kelvin (K)</item>
    </string-array>
    <string-array name="con_arr_temp_u">
        <item>\u00B0C</item>
        <item>\u00B0F</item>
        <item>K</item>
    </string-array>
    <string-array name="con_arr_time">
        <item>Milliseconds (ms)</item>
        <item>Seconds (s)</item>
        <item>Minutes (min)</item>
        <item>Hours (h)</item>
        <item>Days (d)</item>
        <item>Weeks (wk)</item>
    </string-array>
    <string-array name="con_arr_time_u">
        <item>ms</item>
        <item>s</item>
        <item>min</item>
        <item>h</item>
        <item>d</item>
        <item>wk</item>
    </string-array>
    <string-array name="con_arr_speed">
        <item>Meters per sec (m/s)</item>
        <item>Meters per hr (m/h)</item>
        <item>Kilometers per sec (km/s)</item>
        <item>Kilometers per hr (km/h)</item>
        <item>Miles per sec (mi/s)</item>
        <item>Miles per hr (mi/h)</item>
    </string-array>
    <string-array name="con_arr_speed_u">
        <item>m/s</item>
        <item>m/h</item>
        <item>km/s</item>
        <item>km/h</item>
        <item>mi/s</item>
        <item>mi/h</item>
    </string-array>

</resources>