<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Calculator"
    >
    <!--display-->
    <TextView
        android:id="@+id/cal_disp1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:gravity="end"
        android:text="@string/cal_disp1"
        android:textColor="@color/gray_200"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/cal_disp2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/cal_disp1"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:gravity="end"
        android:text="@string/cal_disp2"
        android:textColor="@color/white"
        android:textSize="50sp" />
    <!--numpad-->
    <LinearLayout
        android:id="@+id/cal_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cal_disp2"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >
        <!-- row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/cal_button_clr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_200"
                android:hint="@string/cal_clr"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_sign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_200"
                android:hint="@string/cal_sign"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_pct"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_200"
                android:hint="@string/cal_pct"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_div"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/purple_500"
                android:hint="@string/cal_div"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <!-- row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/cal_button_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_9"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_8"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_7"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_mul"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/purple_500"
                android:hint="@string/cal_mul"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <!-- row 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/cal_button_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_6"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_5"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_4"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_sub"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/purple_500"
                android:hint="@string/cal_sub"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <!-- row 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/cal_button_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_3"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_2"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_1"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/purple_500"
                android:hint="@string/cal_add"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <!-- row 5 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/cal_button_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_0"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gray_700"
                android:hint="@string/cal_dot"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cal_button_equ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/purple_700"
                android:hint="@string/cal_equ"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>