<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Converter">
    <!-- conversion menu -->


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/con_tabs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        app:tabBackground="@color/black"
        app:tabTextColor="@color/gray_200"
        app:tabIndicatorColor="@color/black"
        app:tabSelectedTextColor="@color/white"
        app:tabGravity="fill"
        >
        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/con_len"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="50dp"
            android:text="@string/con_mass"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="50dp"
            android:text="@string/con_temp"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="50dp"
            android:text="@string/con_time"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="50dp"
            android:text="@string/con_speed"
            />
    </com.google.android.material.tabs.TabLayout>



    <!-- from unit header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/con_from"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <Spinner
            style="@style/convSpinner"
            android:id="@+id/con_from_spin"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            />
    </RelativeLayout>
    <!-- from unit input -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        >

        <TextView
            android:id="@+id/con_from_unit"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/con_from_num"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/con_from_unit"
            android:layout_toLeftOf="@+id/con_from_unit"
            android:layout_marginHorizontal="20dp"
            android:paddingTop="20dp"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:text="@string/cal_0"
            />
    </RelativeLayout>
    <!-- to unit header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/con_to"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <Spinner
            style="@style/convSpinner"
            android:id="@+id/con_to_spin"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            />
    </RelativeLayout>
    <!-- to unit input -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        >
        <TextView
            android:id="@+id/con_to_unit"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/con_to_num"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/con_to_unit"
            android:layout_toLeftOf="@+id/con_to_unit"
            android:layout_marginHorizontal="20dp"
            android:paddingTop="20dp"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:text="@string/cal_0"
            />
    </RelativeLayout>
    <!-- keypad -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        >
        <Button
            android:id="@+id/con_pad_1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_toLeftOf="@+id/con_pad_2"
            android:layout_toStartOf="@+id/con_pad_2"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_1"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_2"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_toRightOf="@+id/con_pad_2"
            android:layout_toEndOf="@+id/con_pad_2"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_3"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@+id/con_pad_1"
            android:layout_toLeftOf="@+id/con_pad_5"
            android:layout_toStartOf="@+id/con_pad_5"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_4"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/con_pad_2"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_5"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@+id/con_pad_3"
            android:layout_toRightOf="@+id/con_pad_5"
            android:layout_toEndOf="@+id/con_pad_5"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_6"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@+id/con_pad_4"
            android:layout_toLeftOf="@+id/con_pad_8"
            android:layout_toStartOf="@+id/con_pad_8"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_7"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/con_pad_5"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_8"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@+id/con_pad_6"
            android:layout_toRightOf="@+id/con_pad_8"
            android:layout_toEndOf="@+id/con_pad_8"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_9"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/con_pad_8"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_0"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_clr"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@+id/con_pad_7"
            android:layout_toLeftOf="@+id/con_pad_0"
            android:layout_toStartOf="@+id/con_pad_0"
            android:backgroundTint="@color/purple_700"
            android:gravity="center"
            android:hint="@string/cal_clr"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />
        <Button
            android:id="@+id/con_pad_dot"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@+id/con_pad_9"
            android:layout_toRightOf="@+id/con_pad_0"
            android:layout_toEndOf="@+id/con_pad_0"
            android:backgroundTint="@color/gray_700"
            android:gravity="center"
            android:hint="@string/cal_dot"
            android:textSize="30sp"
            android:textColorHint="@color/white"
            />



    </RelativeLayout>







</LinearLayout>